# urc_2022_aruco_markers

./: CMakeLists.txt  README.md  package.xml
blender/: 3_sided_marker.dae  urc_aruco_0.blend  urc_aruco_1.blend  urc_aruco_2.blend  urc_aruco_3.blend  urc_aruco_4.blend  urc_aruco_5.blend
models/urc_aruco_0/: model.config  model.sdf
models/urc_aruco_0/meshes/: urc_aruco_0.dae
models/urc_aruco_1/: model.config  model.sdf
models/urc_aruco_1/meshes/: urc_aruco_1.dae
models/urc_aruco_2/: model.config  model.sdf
models/urc_aruco_2/meshes/: urc_aruco_2.dae
models/urc_aruco_3/: model.config  model.sdf
models/urc_aruco_3/meshes/: urc_aruco_3.dae
models/urc_aruco_4/: model.config  model.sdf
models/urc_aruco_4/meshes/: urc_aruco_4.dae
models/urc_aruco_5/: model.config  model.sdf
models/urc_aruco_5/meshes/: urc_aruco_5.dae
